--- a/backend/package.json
+++ b/backend/package.json
@@ -5,20 +5,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.2.2",
-    "nodemailer": "^6.7.2",
     "node-cron": "^2.0.3",
-    "dotenv": "^10.0.0"
+    "nodemailer": "^6.7.2"
   },
-  
-    "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "node server.js"  
-    }
-  
-  
-  
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "node server.js"
+  }
 }
